language/move-lang/tests/move_check/typing/constraints_not_satisfied_type_arguments_internal_pack.exp
error: 

   ┌── tests/move_check/typing/constraints_not_satisfied_type_arguments_internal_pack.move:3:5 ───
   │
 8 │         Box<CupC<R>>{};
   │         ^^^^^^^^^^^^^^ Cannot ignore resource values. The value must be used
   ·
 3 │     resource struct R {}
   │     -------- 0000000000000000000000000000000000000000000000000000000008675309.M.Box<0000000000000000000000000000000000000000000000000000000008675309.M.CupC<0000000000000000000000000000000000000000000000000000000008675309.M.R>> is found to be a non-copyable type here
   │

error: 

   ┌── tests/move_check/typing/constraints_not_satisfied_type_arguments_internal_pack.move:2:20 ───
   │
 8 │         Box<CupC<R>>{};
   │             ^^^^^^^ Constraint not satisfied. The resource type '0000000000000000000000000000000000000000000000000000000008675309.M.R' does not satisfy the constraint 'copyable'
   ·
 3 │     resource struct R {}
   │     -------- The type's constraint information was declared here
   ·
 2 │     struct CupC<T: copyable> {}
   │                    -------- 'copyable' constraint declared here
   │

error: 

   ┌── tests/move_check/typing/constraints_not_satisfied_type_arguments_internal_pack.move:3:5 ───
   │
 9 │         Box<R>{};
   │         ^^^^^^^^ Cannot ignore resource values. The value must be used
   ·
 3 │     resource struct R {}
   │     -------- 0000000000000000000000000000000000000000000000000000000008675309.M.Box<0000000000000000000000000000000000000000000000000000000008675309.M.R> is found to be a non-copyable type here
   │

