language/move-lang/tests/move_check/typing/constraints_not_satisfied_type_arguments_internal_pack.move
module M {
    struct CupC<T: copyable> {}
    resource struct R {}

    struct Box<T> {}

    foo() {
        Box<CupC<R>>{};
        Box<R>{};
    }

}
